--- a/pod.yaml
+++ b/pod.yaml
@@ -4,7 +4,6 @@ metadata:
   name: nginx
 spec:
   containers:
-  - name: nginx
-    image: nginx:1.14.2
-    ports:
-    - containerPort: 80
+  - name: webapp
+    image: richardchesterwood/k8s-fleetman-webapp-angular:release0
+    
