--- a/service.yaml
+++ b/service.yaml
@@ -4,11 +4,19 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: my-service
+  name: fleetman-webapp
 spec:
   selector:
-    app.kubernetes.io/name: MyApp
+     #THis defines which services are going to be represented by this service 
+     # THis service becomes a network end point for either other services
+     #Or may be external user like browser.  
+    app: webapp
   ports:
-    - protocol: TCP
+    - name: http
+      protocol: TCP
       port: 80
-      targetPort: 9376
+      #target port is contianer port, Port is service port mostly same both part This is clusterIP  service Means only inside the cluster not webbrowser. 
+      #But our is webapp so we need NodePort service. NOdeport is 30000 to 327000
+      targetPort: 80
+      nodePort: 30080
+  type: NodePort    #internet facing 
