--- a/servicequeue.yaml
+++ b/servicequeue.yaml
@@ -24,3 +24,8 @@ spec:
       targetPort: 8161
       nodePort: 30010
   type: NodePort    #internet facing 
+
+
+kubectl port-forward svc/fleetman-queue 30010:8161
+#localhost:30010
+
