--- a/Deployements.yaml
+++ b/Deployements.yaml
@@ -6,6 +6,7 @@ metadata:
   name: webapp-dep
 spec:
   # modify replicas according to your case
+  minReadySeconds: 30           #
   replicas: 2
   selector:
     matchLabels:
