--- a/microservice-project/mongo-DB.yaml
+++ b/microservice-project/mongo-DB.yaml
@@ -17,3 +17,25 @@ spec:
       containers:
       - name: mongodb
         image: mongo:3.6.5-jessie
+
+___
+
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: fleetman-mongodb
+spec:
+  selector:
+     #THis defines which services are going to be represented by this service 
+     # THis service becomes a network end point for either other services
+     #Or may be external user like browser.  
+    app: mongodb
+  ports:
+    - name: mongoport
+      protocol: TCP
+      port: 27017
+      #target port is contianer port, Port is service port mostly same both part This is clusterIP  service Means only inside the cluster not webbrowser. 
+      #But our is webapp so we need NodePort service. NOdeport is 30000 to 327000
+  type: ClusterIP
+
