--- a/EKS/-EKS-Storage-with-EBS-ElasticBlockStore/SC-PVC-ConfigMap-MySQL/kube-manifest/2-persistent-volume-claim.yaml
+++ b/EKS/-EKS-Storage-with-EBS-ElasticBlockStore/SC-PVC-ConfigMap-MySQL/kube-manifest/2-persistent-volume-claim.yaml
@@ -1,3 +1,5 @@
+#
+
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
@@ -8,4 +10,4 @@ spec:
   storageClassName: ebs-sc
   resources: 
     requests:
-      storage: 4Gi
+      storage: 4Gi      #how much storage we request from persisten volume or perirtent class. 
